# SanMouAnalyser

./: README.md  pyproject.toml
docs/: battle_summary_plan.md
src/sanmou_report_analysis/: collect_summary.py  debug_capture.py
src/sanmou_report_analysis/utils/: battle_summary.py  geometry.py  list_navigator.py  ocr.py  process_info.py
tests/: test_battle_summary.py
