[project]
name = "sanmou-report-analysis"
version = "0.1.0"
description = "A tool for capturing battle report screenshots and performing automated analysis for NSLG"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "keyboard>=0.13.5",
    "mss>=10.1.0",
    "numpy>=2.4.3",
    "opencv-python>=4.13.0.92",
    "paddleocr>=3.4.0",
    "paddlepaddle>=3.0.0",
    "pandas>=3.0.1",
    "pillow>=12.1.1",
    "psutil>=7.2.2",
    "pyautogui>=0.9.54",
    "pygetwindow>=0.0.9",
    "pynput>=1.8.1",
    "pyqt5>=5.15.11",
    "pywin32>=311 ; sys_platform == 'win32'",
    "scipy>=1.17.1",
    "screeninfo>=0.8.1",
    "tqdm>=4.67.3",
]

[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[tool.uv]
# 确保依赖解析覆盖 Windows（win_amd64）。新版 pyqt5-qt5（如 5.15.18）只发布
# Linux/macOS wheel，会导致 `uv sync` 在 Windows 上报错；声明该环境后，
# uv 会回退到仍带 Windows wheel 的版本（pyqt5-qt5 5.15.2）。
required-environments = [
    "sys_platform == 'win32' and platform_machine == 'AMD64'",
]

[tool.hatch.build.targets.wheel]
packages = ["src/sanmou_report_analysis"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "C4"]
ignore = ["B008"]

[tool.ruff.format]
line-ending = "auto"
quote-style = "double"
docstring-code-format = true

[tool.pytest.ini_options]
pythonpath = ["src"]
